--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
         <meta charset="utf-8">
         <meta property="og:title" content="Soul Realms - New Faction-RPG Discord Bot Generation">
         <meta property="og:description" content="Soul Realms is a combination of Faction-RPG, bringing you a new experience of RPG on discord. More than hundreds of people are enjoying this game, join now!">
-        <meta property="og:image" content="https://soulrealms.ml/data/botLogo.png">
+        <meta property="og:image" content="https://ninnin-sabishi-code.github.io/SoulRealms-web/assets/img/botLogo.png">
         <title>Soul Realms Bot</title>
         <link rel="icon" href="assets/img/botLogo.png">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
+        <!-- Start Header -->
         <div id="header">
             <div id="logo">
-                <a href="index.html"><img src="assets/img/botLogo.png"></a>
+                <a href="index.html" style="font-size: 0;"><img src="assets/img/botLogo.png"></a>
                 <a id="sub-heading" href="index.html">Soul Realms</a>
             </div>
             <ul id="nav">
@@ -24,7 +25,9 @@
             </ul>
         </div>
 
+        <!-- Start Content -->
         <div id="content">
+            <!-- Start Main -->
             <div id="main">
                 <h1>Soul Realms</h1>
                 <h2>New Faction-RPG Discord Bot Generation</h2>
@@ -34,17 +37,59 @@
                 </a>
             </div>
 
+            <!-- Start Example -->
             <div id="example">
 
             </div>
 
+            <!-- Start Direction Links -->
             <div id="direction">
-
+                <h1>Join our Community</h1>
+                <div id="direct-table">
+                    <ul id="direct-count">
+                        <li><h2>In 100+ Servers</h2></li>
+                        <li><h2>And 100+ Players</h2></li>
+                    </ul>
+                    <ul id="direct-link">
+                        <li><a href="invite.html">Invite Now</a></li>
+                        <li><a href="server.html">Official Server</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
 
+        <!-- Start Footer -->
         <div id="footer">
-
+            <div id="wrapper">
+                <div id="info">
+                    <img src="assets/img/botLogo.png">
+                    <div id="text-footer">
+                        <h1>Soul Realms</h1>
+                        <p>CopyRight (c) 2021 Soul Realms Team</p>
+                    </div>
+                </div>
+                <div id="menu">
+                    <ul class="">
+                        <li><a href="server.html">Community</a></li>
+                        <li><a href="commands.html">Commands</a></li>
+                        <li><a href="donate.html">Support us</a></li>
+                    </ul>
+                    <ul class="">
+                        <li><a href="rules.html">Rules</a></li>
+                        <li><a href="terms.html">Terms</a></li>
+                        <li><a href="privacy.html">Privacy</a></li>
+                    </ul>
+                    <ul class="">
+                        <li><a href="hiring.html">We're Hiring!</a></li>
+                        <li><a href="staff.html">Staff</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="designer">
+                <p>Web developed by TrieuHiroVN ❄#9063</p>
+            </div>
         </div>
     </body>
 </html>
+
+<!-- CopyRight (c) 2021 NinNin Sabishi Organization - Soul Realms Team -->
